--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         
         <div class="cabecalho">
             <div class="texto">
-            <h1 class="titulo-header">Seu diário com voluntários para oferecer apoio em momentos difíceis</h1>
-            <h2 class="paragrafo-header" >Baixe nosso aplicativo e faça parte!</h2>
-           
+            <h1 class="titulo-header">SEU DIÁRIO COM VOLUNTÁRIOS QUE OFERECEM APOIO EM <div class="destaque">MOMENTOS DIFÍCEIS</div></h1>
+            <h2 class="paragrafo-header" >BAIXE NOSSO APLICATIVO E FAÇA PARTE!</h2>
 ,
             <button class="button-header">Android</button>
             <button class="button-header">IOS</button>
@@ -40,7 +39,7 @@
         <img src="img/foto1.png" alt="">
         <p>Bem-vindo ao Youth Protection, um aplicativo de diário criado para apoiar a saúde mental 
             de crianças e adolescentes. Aqui, você pode compartilhar seus pensamentos e experiências,
-             recebendo apoio de voluntários que oferecem um ombro amigo em momentos difíceis.
+            recebendo apoio de voluntários que oferecem um ombro amigo em momentos difíceis.
             Nosso objetivo é proporcionar um espaço seguro e acolhedor, onde ninguém se sinta sozinho. 
             Junte-se a nós para construir uma comunidade solidária, onde boas palavras e empatia podem 
             fazer a diferença na vida de cada um.</p>
@@ -52,10 +51,10 @@
             <h2>Faça Parte</h2>
             <img src="img/foto.mob.facaparte.png" alt="">
             <p>Ser voluntário na Youth Protection é uma oportunidade incrível de fazer a diferença
-                 na vida de crianças e adolescentes. Ao se tornar um voluntário, você se junta a uma 
-                 comunidade dedicada a oferecer apoio emocional e acolhimento a jovens que podem estar
-                  enfrentando momentos difíceis. Cada interação é uma chance de impactar positivamente 
-                  a vida de alguém, oferecendo um ombro amigo e palavras de encorajamento.
+                na vida de crianças e adolescentes. Ao se tornar um voluntário, você se junta a uma 
+                comunidade dedicada a oferecer apoio emocional e acolhimento a jovens que podem estar
+                enfrentando momentos difíceis. Cada interação é uma chance de impactar positivamente 
+                a vida de alguém, oferecendo um ombro amigo e palavras de encorajamento.
                 Como voluntário, você terá a chance de ler e comentar nas publicações dos usuários, 
                 criando um espaço de diálogo aberto e empático. Seu papel é ouvir, apoiar e compartilhar 
                 mensagens de esperança e compreensão. Você poderá conectar-se com jovens que, muitas 
@@ -68,11 +67,10 @@
         <section class="Colabore">
             <h3>colabore:</h3>
             <h2>Seja Voluntário!</h2>
-            <label>Nome:<input type="text" name="nome" /></label><br />
-            <label>Telefone:<input type="text" name="idade" /></label><br />
-            <label>Email:<input type="text" name="nome" /></label><br />
-            <label>Profissão:<input type="text" name="idade" /></label><br />
-            <label>Por que você quer ser voluntário da Youth Protection?<input type="text" name="nome" /></label><br />
+            <label>Nome: <br><input type="text" name="nome" /></label><br/>
+            <label>Telefone: <br><input type="text" name="idade" /></label><br/>
+            <label>Email: <br><input type="text" name="nome" /></label><br/>
+            <label>Profissão: <br><input type="text" name="idade" /></label><br/>
 
             <button class="button-formulario">Enviar!</button>
         </section>
