--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <button class="button-header">IOS</button>
             </div>
             <img class="imagem-header" src="img/mobilecabecalho.png" alt="">
+            <img class="imagem-header-desktop" src="img/dektopcabecalho.png" alt="">
         </div>
     </header>
 
@@ -36,6 +37,7 @@
         <section class="SobreNos">
         <h3>conheça mais</h3>
         <h2>Sobre nós</h2>
+        <div class="SobreNosContent">
         <img src="img/foto1.png" alt="">
         <p>Bem-vindo ao Youth Protection, um aplicativo de diário criado para apoiar a saúde mental 
             de crianças e adolescentes. Aqui, você pode compartilhar seus pensamentos e experiências,
@@ -43,8 +45,11 @@
             Nosso objetivo é proporcionar um espaço seguro e acolhedor, onde ninguém se sinta sozinho. 
             Junte-se a nós para construir uma comunidade solidária, onde boas palavras e empatia podem 
             fazer a diferença na vida de cada um.</p>
+        </div>
+        
         <button class="button-sobrenos">Faça Parte!</button>    
         </section>
+        
 
         <section class="FacaParte">
             <h3>conheça mais</h3>
