atualizacoes no responsivo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <div class="cabecalho">
             <div class="texto">
-            <h1 class="titulo-header">SEU DIÁRIO COM VOLUNTÁRIOS QUE OFERECEM APOIO EM <div class="destaque">MOMENTOS DIFÍCEIS</div></h1>
+            <h1 class="titulo-header">SEU DIÁRIO VOLUNTÁRIO PARA OFERECER APOIO EM <div class="destaque">MOMENTOS <div class="destaqueDesktop">DIFÍCEIS</div></div></h1>
             <h2 class="paragrafo-header" >BAIXE NOSSO APLICATIVO E FAÇA PARTE!</h2>
 ,
             <button class="button-header">Android</button>
@@ -54,6 +54,7 @@
         <section class="FacaParte">
             <h3>conheça mais</h3>
             <h2>Faça Parte</h2>
+            <div class="FacaParteContent">
             <img src="img/foto.mob.facaparte.png" alt="">
             <p>Ser voluntário na Youth Protection é uma oportunidade incrível de fazer a diferença
                 na vida de crianças e adolescentes. Ao se tornar um voluntário, você se junta a uma 
@@ -67,6 +68,7 @@
                 Junte-se a nós na Youth Protection e seja parte de uma missão importante. Sua 
                 contribuição pode transformar vidas e criar um ambiente mais solidário e acolhedor 
                 para todos. Venha fazer a diferença!</p>
+            </div>
         </section>
 
         <section class="Colabore">
